--- a/GigHub2/Views/Shared/_Layout.cshtml
+++ b/GigHub2/Views/Shared/_Layout.cshtml
@@ -35,10 +35,6 @@
   </div>
   <div class="container body-content">
     @RenderBody()
-    <hr />
-    <footer>
-      <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-    </footer>
   </div>
 
   @Scripts.Render("~/bundles/jquery")
@@ -49,17 +45,20 @@
     $(document).ready(function () {
 
       $(".js-notifications-count")
-        .addClass("animate heartBeat")
-        ;
+        .addClass("animate heartBeat");
 
-      //$.getJSON("/api/notifications/GetNewNotifications", function (notifications) {
-      //  alert(notifications.lenght);
-      //  $(".js-notifications-count")
-      //    .text(notifications.lenght)
-      //    .removeClass("hide")
-      //    .addClass("animate heartBeat")
-      //    ;
-      //});
+      $.getJSON("/api/notifications/GetNewNotifications", function (notifications) {
+        console.log(notifications);
+      //  console.log(res.Array.lenght);
+        if (Array.lenght !== undefined) {
+          alert(Array.lenght);
+          $(".js-notifications-count")
+            .text(Array.lenght)
+            .removeClass("hide")
+            .addClass("animate heartBeat")
+          ;
+        }
+      });
     });
 
   </script>
