--- a/GigHub2/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub2/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
       <li class="notifications">
         <a href="#">
           <i class="glyphicon glyphicon-globe"></i>
-          <span class="badge js-notifications-count">4</span>
+          <span class="badge js-notifications-count"></span>
         </a>
       </li>
 
